--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
     </div>
     <div>
       <small>
-        <a href="https://github.com/jamesliu96/geheim">geheim</a
-        ><em><a href="https://github.com/jamesliu96/geheimnis">nis</a></em>
+        <a href="https://github.com/jamesliu96/geheim">geheim</a>
         <span id="version"></span>
       </small>
     </div>
