--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <span id="options">
         <select
           id="cipher"
-          onchange="__x__.cipher = +this.value; $mode.disabled = __x__.cipher !== 1"
+          onchange="__x__.cipher = +this.value; $mode.style.display = __x__.cipher === 1 ? '' : 'none'"
         ></select>
         <select id="mode" onchange="__x__.mode = +this.value"></select>
         <select id="kdf" onchange="__x__.kdf = +this.value"></select>
@@ -99,7 +99,6 @@
         window.$md = document.querySelector('#md');
         window.$sec = document.querySelector('#sec');
         window.run = async () => {
-          if ($run.disabled) return;
           setReady(false);
           setDownloadable(false);
           await sleep();
@@ -200,7 +199,6 @@
           .then((result) => {
             mod = result.module;
             inst = result.instance;
-            setReady(true);
           })
           .then(run)
           .then(() => {
