--- a/xp/index.html
+++ b/xp/index.html
@@ -118,10 +118,13 @@
           $x.disabled = $p.disabled = !x;
         };
         const go = new Go();
-        let mod, inst;WebAssembly.instantiateStreaming(
+        let mod, inst;
+        WebAssembly.instantiateStreaming(
           Promise.race([
             fetch('/xp/xp.wasm'),
-            fetch('https://cdn.jsdelivr.net/gh/jamesliu96/geheimnis/xp/xp.wasm'),
+            fetch(
+              'https://cdn.jsdelivr.net/gh/jamesliu96/geheimnis/xp/xp.wasm'
+            ),
           ]),
           go.importObject
         )
