--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <a href="/xp/">xp</a>
       </small>
     </div>
-    <script src="wasm_exec.js"></script>
+    <script src="/wasm_exec.js"></script>
     <script src="/version.js"></script>
     <script>
       window.__x__ = {};
